// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/widgets/loading/LoadingWrapper showing content with children 1`] = `
<LoadingWrapper
  loading={false}
  text={null}
>
  text
</LoadingWrapper>
`;

exports[`components/widgets/loading/LoadingWrapper showing content without children 1`] = `
<LoadingWrapper
  loading={false}
  text={null}
/>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner with text 1`] = `
<LoadingWrapper
  loading={true}
  text="test"
>
  <Memo(LoadingSpinner)
    text="test"
  >
    <span
      className="LoadingSpinner with-text"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        className="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
      test
    </span>
  </Memo(LoadingSpinner)>
</LoadingWrapper>
`;

exports[`components/widgets/loading/LoadingWrapper showing spinner without text 1`] = `
<LoadingWrapper
  loading={true}
  text={null}
>
  <Memo(LoadingSpinner)
    text={null}
  >
    <span
      className="LoadingSpinner"
      data-testid="loadingSpinner"
      id="loadingSpinner"
    >
      <span
        className="fa fa-spinner fa-fw fa-pulse spinner"
        title="Loading Icon"
      />
    </span>
  </Memo(LoadingSpinner)>
</LoadingWrapper>
`;
